maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:43: error: reassignment to val
    if (indics(j)+1 < i) i = indics(j)+1;
                           ^